changed border to prevent overlap

--- a/style.css
+++ b/style.css
@@ -44,7 +44,8 @@ body{
 .grid{
     flex: 1 1 calc(100% / 32); 
     height: calc(100% / 32);
-    border: 1px solid black;
+    border-left: 1px solid black;
+    border-top:  1px solid black;
     background-color: white;
     box-sizing: border-box;
     aspect-ratio: 1/1;
